# cpp-logging-lib

./: CMakeLists.txt
include/: Abstract.h  Log.h  Logger.h  MessageHandler.h  Types.h
src/: Log.cpp  Logger.cpp  MessageHandler.cpp
